# django_project

./: .gitignore  README.md  pyproject.toml
mysite/myauth/: serializers.py  services.py  urls.py  viewsapi.py
mysite/myprofile/: models.py  serializers.py  urls.py  viewsapi.py
mysite/myprofile/migrations/: 0001_initial.py  0002_alter_profile_phone.py  0003_alter_profile_avatar.py  0004_alter_profile_avatar.py  0005_alter_profile_email_alter_profile_phone.py  0006_alter_profile_email_alter_profile_phone.py  0007_alter_profile_email_alter_profile_phone.py  0008_alter_profile_email_alter_profile_phone.py  0009_alter_profile_avatar.py  0010_alter_profile_user.py
mysite/mysite/: settings.py  urls.py
mysite/shopapp/: admin.py  models.py  serializers.py  services.py  urls.py  viewsapi.py
mysite/shopapp/migrations/: 0001_initial.py  0002_subcategory_alter_product_category.py  0003_alter_product_category_alter_subcategory_category.py  0004_alter_category_options_alter_subcategory_options.py  0005_alter_category_options_alter_subcategory_options_and_more.py  0006_alter_product_rating_alter_product_tags.py  0007_alter_tag_name.py  0008_alter_product_tags.py  0009_alter_tag_options_alter_product_tags_and_more.py  0010_alter_product_description_and_more.py  0011_alter_category_options_alter_reviews_options_and_more.py  0012_remove_product_rating.py  0013_product_rating.py  0014_alter_product_category.py  0015_alter_tag_name.py  0016_alter_product_category.py  0017_alter_product_description_and_more.py  0018_alter_reviews_product_review.py  0019_alter_reviews_product_review.py  (+23 more)
(+2 files in other folders)
